--- a/app/views/pdfs/_front_page_markers.html.erb
+++ b/app/views/pdfs/_front_page_markers.html.erb
@@ -1,24 +1,11 @@
 <div class="front-page-markers">
   <div class="title">
-    <strong><%= t('.risks.title') %></strong>
+    <strong><%= t('.healthcare_information.title') %></strong>
   </div>
   <div class="markers">
     <div class="indicator">
       <div>
-        <div class="label-inline"><%= t('.risks.violence') %></div>
-      </div>
-      <div>
-        <div class="check-box"></div>
-        <div class="label-inline"><%= t('.risks.yes_label') %></div>
-      </div>
-      <div>
-        <div class="check-box"></div>
-        <div class="label-inline"><%= t('.risks.no_label') %></div>
-      </div>
-    </div>
-    <div class="indicator">
-      <div>
-        <div class="label-inline"><%= t('.risks.escape') %></div>
+        <div class="label-inline"><%= t('.healthcare_information.acct') %></div>
       </div>
       <div>
         <div class="check-box"></div>
@@ -55,6 +42,42 @@
         <div class="label-inline"><%= t('.risks.no_label') %></div>
       </div>
     </div>
+  </div>
+  <div class="notes">
+    <span class="health"><%= t('.healthcare_information.notes') %></span>
+  </div>
+</div>
+<div class="front-page-markers">
+  <div class="title">
+    <strong><%= t('.risks.title') %></strong>
+  </div>
+  <div class="markers">
+    <div class="indicator">
+      <div>
+        <div class="label-inline"><%= t('.risks.violence') %></div>
+      </div>
+      <div>
+        <div class="check-box"></div>
+        <div class="label-inline"><%= t('.risks.yes_label') %></div>
+      </div>
+      <div>
+        <div class="check-box"></div>
+        <div class="label-inline"><%= t('.risks.no_label') %></div>
+      </div>
+    </div>
+    <div class="indicator">
+      <div>
+        <div class="label-inline"><%= t('.risks.escape') %></div>
+      </div>
+      <div>
+        <div class="check-box"></div>
+        <div class="label-inline"><%= t('.risks.yes_label') %></div>
+      </div>
+      <div>
+        <div class="check-box"></div>
+        <div class="label-inline"><%= t('.risks.no_label') %></div>
+      </div>
+    </div>
     <div class="indicator">
       <div>
         <div class="label-inline"><%= t('.risks.non_association') %></div>
@@ -70,7 +93,7 @@
     </div>
   </div>
   <div class="notes">
-    <span><%= t('.risks.notes') %></span>
+    <span class="risk"><%= t('.risks.notes') %></span>
   </div>
 </div>
 <div class="front-page-markers">
@@ -93,30 +116,7 @@
     </div>
   </div>
   <div class="notes">
-    <span><%= t('.offence_information.notes') %></span>
-  </div>
-</div>
-<div class="front-page-markers">
-  <div class="title">
-    <strong><%= t('.healthcare_information.title') %></strong>
-  </div>
-  <div class="markers">
-    <div class="indicator">
-      <div>
-        <div class="label-inline"><%= t('.healthcare_information.acct') %></div>
-      </div>
-      <div>
-        <div class="check-box"></div>
-        <div class="label-inline"><%= t('.risks.yes_label') %></div>
-      </div>
-      <div>
-        <div class="check-box"></div>
-        <div class="label-inline"><%= t('.risks.no_label') %></div>
-      </div>
-    </div>
-  </div>
-  <div class="notes">
-    <span><%= t('.healthcare_information.notes') %></span>
+    <span class="offence"><%= t('.offence_information.notes') %></span>
   </div>
 </div>
 
