--- a/app/views/pdfs/_updates.html.erb
+++ b/app/views/pdfs/_updates.html.erb
@@ -2,9 +2,11 @@
   <strong class="label">
     <%= t('.title') %>
   </strong>
-  <span class="instructions"><%= t('.instructions') %></span>
-  <div class="updates_field">
-    <div class="sash_field"></div>
-    <span class="instructions"><%= t('.sash_instructions') %></span>
+    <span class="instructions"><%= t('.instructions') %></span>
+  <div class="sash-container">
+  <span class="sash-instructions"><%= t('.sash_instructions') %></span>
+    <div class="sash-field"></div>
+  </div>
+  <div class="updates-field">
   </div>
 </div>
