--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="pdfkit-footer_right" content="<%= t('pdfs.footer.page_number') %>" />
+  <meta name="pdfkit-footer_left" content="<%= t('pdfs.footer.protective_marking').to_s.upcase %>" />
+  <meta name="pdfkit-footer_font_size" content="10" />
   <style>
     <%= PdfStylesheetBuilder.html_safe_pdf_stylesheet %>
   </style>
