--- a/app/assets/stylesheets/pdf/_risk_summary.scss
+++ b/app/assets/stylesheets/pdf/_risk_summary.scss
@@ -1,3 +1,9 @@
+.risk-summary {
+  .section-heading {
+    margin-bottom: $margin-large;
+  }
+}
+
 .risk {
   @extend .row;
   > div {
@@ -8,6 +14,7 @@
   }
   .date {
     width: 17.3%;
+    text-align: center;
     .content {
       border-left: none;
     }
@@ -24,6 +31,7 @@
 .completed-by {
   @extend .light-background;
   @extend .padded;
+  margin-top: $margin-large;
   > div {
     @extend .row;
     div {
