Add CRO & PNC Numbers to the identification form

--- a/app/views/escorts/_identification.html.erb
+++ b/app/views/escorts/_identification.html.erb
@@ -78,3 +78,13 @@
   <%= f.label :nationality, class: 'form-label-bold' %>
   <%= f.text_field :nationality, class: 'string form-control' %>
 </div>
+
+<div class="form-group">
+  <%= f.label :cro_number, class: 'form-label-bold' %>
+  <%= f.text_field :cro_number, class: 'string form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :pnc_number, class: 'form-label-bold' %>
+  <%= f.text_field :pnc_number, class: 'string form-control' %>
+</div>
