--- a/app/views/escorts/summary/_prisoner_information.html.erb
+++ b/app/views/escorts/summary/_prisoner_information.html.erb
@@ -36,5 +36,13 @@
       <strong class="label"><%= t('.prison_number') %></strong>
       <div class="output"><%= prisoner_information.prison_number %></div>
     </div>
+    <div class="cro-number">
+      <strong class="label"><%= t('.cro_number') %></strong>
+      <div class="output"><%= prisoner_information.cro_number %></div>
+    </div>
+    <div class="pnc-number">
+      <strong class="label"><%= t('.pnc_number') %></strong>
+      <div class="output"><%= prisoner_information.pnc_number %></div>
+    </div>
   </div>
 </div>
