Add CRO & PNC output to the PDF form

--- a/app/assets/stylesheets/pdf/_prisoner_information.scss
+++ b/app/assets/stylesheets/pdf/_prisoner_information.scss
@@ -75,12 +75,10 @@
 
   .identification-numbers {
     @extend .row;
-    .prison-number {
+    .prison-number, .cro-number, .pnc-number {
       @extend .input-margin;
       @extend .col;
       width: 25%;
     }
   }
 }
-
-
