Add handover details heading and fit to travel
Adds these two sections and refactors the inline-* helper
classes to better support reuse.

--- a/app/assets/stylesheets/pdf/_helper_classes.scss
+++ b/app/assets/stylesheets/pdf/_helper_classes.scss
@@ -40,6 +40,7 @@
   @extend .input;
   display: inline-block;
   margin-bottom: $margin-bottom;
+  float: left;
 }
 
 .label {
@@ -51,6 +52,7 @@
   display: inline-block;
   padding: $padding-unit;
   margin-bottom: $margin-bottom;
+  float: left;
 }
 
 .input-margin {
@@ -111,6 +113,7 @@
     .label {
       @extend .label-inline;
       margin-bottom: 0;
+      float: none;
     }
     .input {
       @extend .input-inline;
