Adds must [not] return sections
Adds the must and must not return sections and extracts a new helper
class to manage repeated 'marker with reason' pattern.

--- a/app/assets/stylesheets/pdf/_helper_classes.scss
+++ b/app/assets/stylesheets/pdf/_helper_classes.scss
@@ -137,3 +137,30 @@
     height: 1.7em;
   }
 }
+
+.marker-with-reason {
+  @extend .light-background;
+
+  > div {
+    @extend .row;
+  }
+
+  .marker {
+    @extend .padded;
+    @extend .col;
+  }
+
+  .reason {
+    @extend .padded;
+    @extend .col;
+
+    strong {
+      float: left;
+    }
+
+    .input {
+      width: 33.8em;
+      margin-bottom: 0;
+    }
+  }
+}
