--- a/app/views/pdfs/_handover_details.erb
+++ b/app/views/pdfs/_handover_details.erb
@@ -31,5 +31,26 @@
       </div>
     </div>
   </div>
-</div>
+  <div class="return-information">
+    <div>
+      <div class="marker">
+        <div class="check-box"></div>
+        <strong class="label-inline"><%= t('.must_return') %></strong></div>
+      <div class="reason">
+        <strong class="label-inline"><%= t('.reason') %></strong>
+        <div class="input-inline"></div>
+      </div>
+    </div>
+  </div>
+  <div class="return-information">
+    <div>
+      <div class="marker">
+        <div class="check-box"></div>
+        <strong class="label-inline"><%= t('.must_not_return') %></strong></div>
+      <div class="reason">
+        <strong class="label-inline"><%= t('.reason') %></strong>
+        <div class="input-inline not-to-return"></div>
+      </div>
+    </div>
+  </div>
 </div>
