--- a/app/assets/stylesheets/pdf/_handover_details.scss
+++ b/app/assets/stylesheets/pdf/_handover_details.scss
@@ -1,4 +1,5 @@
 .handover-details {
+
   .fit-to-travel {
     @extend .light-background;
     @extend .padded;
@@ -6,49 +7,54 @@
       @extend .row;
       margin-bottom: 0;
     }
-
   }
-}
 
-.professional-name {
-  @extend .row;
-  margin-bottom: 0;
-  > div {
+  .professional-name {
+    @extend .row;
+    margin-bottom: 0;
+    > div {
+      @extend .col;
+      margin-left: 4em;
+    }
+    .input {
+      @extend .input-inline;
+      width: 27.65em;
+    }
+    .label {
+      @extend .label-inline;
+    }
+  }
+
+  .signature {
     @extend .col;
     margin-left: 4em;
+    .input {
+      @extend .input-inline;
+      width: 16em;
+    }
+    .label {
+      @extend .label-inline;
+    }
   }
-  .input {
-    @extend .input-inline;
-    width: 27.65em;
-  }
-  .label {
-    @extend .label-inline;
-  }
-}
 
-.signature {
-  @extend .col;
-  margin-left: 4em;
-  .input {
-    @extend .input-inline;
-    width: 16em;
+  .role {
+    @extend .col;
+    .input {
+      @extend .input-inline;
+      width: 21.2em;
+    }
+    .label {
+      @extend .label-inline;
+    }
   }
-  .label {
-    @extend .label-inline;
-  }
-}
 
-.role {
-  @extend .col;
-  .input {
-    @extend .input-inline;
-    width: 21.2em;
+  .return-information {
+    @extend .marker-with-reason;
+    .marker {
+      width: 19.5%;
+    }
+    .reason > .input {
+      width: 33.25em;
+    }
   }
-  .label {
-    @extend .label-inline;
-  }
-}
-
-* {
-  outline: 1px solid rgba(1, 1, 1, 0.1);
 }
