--- a/app/views/pdfs/_handover_details.erb
+++ b/app/views/pdfs/_handover_details.erb
@@ -53,4 +53,24 @@
       </div>
     </div>
   </div>
+  <div class="medication-handover">
+    <div>
+      <strong class="label"><%= t('.medication_heading') %></strong>
+      <div class="instruction"><%= t('.medication_instructions') %></div>
+    </div>
+    <div class="markers">
+      <div>
+        <div class="check-box"></div>
+        <div class="label-inline"><%= t('.no_medication') %></div>
+      </div>
+      <div>
+        <div class="check-box"></div>
+        <div class="label-inline"><%= t('.medicaton_with_escort') %></div>
+      </div>
+      <div>
+        <div class="check-box"></div>
+        <div class="label-inline"><%= t('.medication_with_prisoner') %></div>
+      </div>
+    </div>
+  </div>
 </div>
