Add enclosed forms

--- a/app/views/pdfs/_handover_details.erb
+++ b/app/views/pdfs/_handover_details.erb
@@ -73,4 +73,81 @@
       </div>
     </div>
   </div>
+  <div class="enclosed-forms">
+    <div>
+      <strong class="label"><%= t('.enclosed_forms') %></strong>
+    </div>
+    <table class="bordered-table">
+      <tr>
+        <th scope="col"><%= t('.form') %></th>
+        <th scope="col"><%= t('.attached') %></th>
+        <th scope="col"><%= t('.quantity') %></th>
+        <th scope="col"><%= t('.form') %></th>
+        <th scope="col"><%= t('.attached') %></th>
+        <th scope="col"><%= t('.quantity') %></th>
+      </tr>
+      <tr>
+        <th scope="row"><%= t('.acct') %></th>
+        <td></td>
+        <td></td>
+        <th scope="row"><%= t('.remand_time') %></th>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <th scope="row"><%= t('.sash') %></th>
+        <td></td>
+        <td></td>
+        <th scope="row"><%= t('.pnc_printout') %></th>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <th scope="row"><%= t('.csra') %></th>
+        <td></td>
+        <td></td>
+        <th scope="row"><%= t('.medical_assessment') %></th>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <th scope="row"><%= t('.core_record') %></th>
+        <td></td>
+        <td></td>
+        <th scope="row"><%= t('.confidential_medical_documents') %></th>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <th scope="row"><%= t('.property_card') %></th>
+        <td></td>
+        <td></td>
+        <th scope="row"><%= t('.is91') %></th>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <th scope="row"><%= t('.categorisation_documentation') %></th>
+        <td></td>
+        <td></td>
+        <th scope="row"><%= t('.deportation_order') %></th>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <th scope="row"><%= t('.restraints_form') %></th>
+        <td></td>
+        <td></td>
+        <th scope="row"><%= t('.warrant') %></th>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <th scope="row"><%= t('.other') %></th>
+        <td colspan="3"></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+  </div>
 </div>
