--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,14 @@
     </main>
 <% end %>
 
+<% content_for :proposition_links do %>
+  <% if user_signed_in? %>
+    <div class='sign-out'>
+      <%= button_to t(:sign_out), destroy_user_session_path, method: :delete %>
+    </div>
+  <% end %>
+<% end %>
+
 <% content_for :javascripts do %>
     <%= javascript_include_tag 'application.js' %>
 <% end %>
