--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -21,5 +21,6 @@
 <%= render('pdfs/healthcare_updates') %>
 <%= render('pdfs/offences') %>
 <%= render('pdfs/handover_details') %>
+<%= render('pdfs/record_of_handover') %>
 </body>
 </html>
