--- a/app/assets/stylesheets/pdf/_offences.scss
+++ b/app/assets/stylesheets/pdf/_offences.scss
@@ -1,8 +1,7 @@
 .offences {
   ul {
+    @extend .bordered-left;
     list-style: none;
-    padding-left: 1em;
-    border-left: 3px solid $light_grey;
     margin-bottom: $margin-bottom;
     li {
       padding: 0.5em 0;
