Changes case of 'Official - sensitive' in locale
Now uppercased in locale file rather than being transformed by
Ruby.

--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta name="pdfkit-footer_right" content="<%= t('pdfs.footer.page_number') %>" />
-  <meta name="pdfkit-footer_left" content="<%= t('pdfs.footer.protective_marking').to_s.upcase %>" />
+  <meta name="pdfkit-footer_left" content="<%= t('pdfs.footer.protective_marking') %>" />
   <meta name="pdfkit-footer_font_size" content="10" />
   <style>
     <%= PdfStylesheetBuilder.html_safe_pdf_stylesheet %>
