Add Checks and Events section and images to PDF
Introduces views and SASS for the Checks and Events section. Also
introduces the images used in the PDF as Base64 encoded inlined
into HTML tags.

--- a/app/assets/stylesheets/pdf/_header.scss
+++ b/app/assets/stylesheets/pdf/_header.scss
@@ -8,11 +8,11 @@ header {
     width: 30%;
   }
   .vehicle_reg {
-    @extend .persistent_info;
+    @extend .persistent-info;
     width: 45%;
   }
   .cell_no {
-    @extend .persistent_info;
+    @extend .persistent-info;
     width: 25%;
     .input {
       width: 3em;
