--- a/app/assets/stylesheets/pdf/_helper_classes.scss
+++ b/app/assets/stylesheets/pdf/_helper_classes.scss
@@ -121,7 +121,7 @@
   h2 {
     display: inline;
   }
-  .persistent_info {
+  .persistent-info {
     text-align: right;
     .label {
       @extend .label-inline;
