--- a/app/views/pdfs/_handover_row.html.erb
+++ b/app/views/pdfs/_handover_row.html.erb
@@ -2,12 +2,12 @@
   <div>
     <%= label %>
     <div class="time-input">
-      <div>Time</div>
+      <div><%= render('pdfs/clock_image') %></div>
       <div></div>
     </div>
   </div>
   <div>
-    <%= render 'pdfs/name_and_signature' %>
+    <%= render('pdfs/name_and_signature') %>
     <% if local_assigns[:contact_number].present? %>
         <span class="label"><%= contact_number %></span>
         <div class="input"></div>
@@ -15,14 +15,14 @@
   </div>
   <div>
     <div class="time-input">
-      <div>Time</div>
+      <div><%= render('pdfs/clock_image') %></div>
       <div></div>
     </div>
   </div>
   <div>
-    <%= render 'pdfs/name_and_signature' %>
+    <%= render('pdfs/name_and_signature') %>
   </div>
   <div>
-    <%= render 'pdfs/name_and_signature' %>
+    <%= render('pdfs/name_and_signature') %>
   </div>
 </div>
