--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -22,5 +22,8 @@
 <%= render('pdfs/offences') %>
 <%= render('pdfs/handover_details') %>
 <%= render('pdfs/record_of_handover') %>
+<%= render('pdfs/checks_and_events_initial') %>
+<%= render('pdfs/checks_and_events_continuation') %>
+<%= render('pdfs/checks_and_events_continuation') %>
 </body>
 </html>
