--- a/app/views/pdfs/_healthcare_needs.html.erb
+++ b/app/views/pdfs/_healthcare_needs.html.erb
@@ -3,7 +3,7 @@
     <div class="heading">
       <h2><%= t('.heading') %></h2>
     </div>
-    <div class="persistent_info">
+    <div class="persistent-info">
       <span class="label"><%= t('pdfs.shared.identifiers_label') %></span>
       <div class="input"></div>
     </div>
