Clean up presenters logic
We moved formatted_date_of_birth, age and capitalized_sex
methods from the presenters into the prisoner model.

We did this because we had two PrisonerInformationPresenters
having the same functionality, so we moved the shared logic
into the model.

--- a/app/views/escorts/summary/_prisoner_information.html.erb
+++ b/app/views/escorts/summary/_prisoner_information.html.erb
@@ -16,7 +16,7 @@
   <div>
     <div class="dob">
       <strong class="label"><%= t('.date_of_birth') %></strong>
-      <div class="output"><%= prisoner_information.date_of_birth %></div>
+      <div class="output"><%= prisoner_information.formatted_date_of_birth %></div>
     </div>
     <div class="age">
       <strong class="label"><%= t('.age') %></strong>
@@ -24,7 +24,7 @@
     </div>
     <div class="sex">
       <strong class="label"><%= t('.sex') %></strong>
-      <div class="output"><%= prisoner_information.sex %></div>
+      <div class="output"><%= prisoner_information.capitalized_sex %></div>
     </div>
     <div class="nationality">
       <strong class="label"><%= t('.nationality') %></strong>
