--- a/app/views/pdfs/_prisoner_information.html.erb
+++ b/app/views/pdfs/_prisoner_information.html.erb
@@ -25,7 +25,7 @@
         </div>
         <div class="sex">
           <strong class="label"><%= t('.sex') %></strong>
-          <div class="input"><%= prisoner_information.sex %></div>
+          <div class="input"><%= prisoner_information.capitalized_sex %></div>
         </div>
         <div class="nationality">
           <strong class="label"><%= t('.nationality') %></strong>
