Add release at court and receipt of property
Introduces view and SASS files for this section of the PDF output.

--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -15,3 +15,4 @@
 @import "pdf/handover_details";
 @import "pdf/record_of_handover";
 @import "pdf/checks_and_events";
+@import "pdf/release_at_court_and_property";
