--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -25,5 +25,6 @@
 <%= render('pdfs/checks_and_events_initial') %>
 <%= render('pdfs/checks_and_events_continuation') %>
 <%= render('pdfs/checks_and_events_continuation') %>
+<%= render('pdfs/release_at_court_and_property') %>
 </body>
 </html>
