--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -12,12 +12,7 @@
 <%= render('pdfs/header') %>
 <%= render('pdfs/not_for_release') %>
 <%= render('pdfs/move_information') %>
-<%=
-  render(
-      'pdfs/prisoner_information',
-      prisoner_information: escort.prisoner_information
-  )
-%>
+<%= render('pdfs/prisoner', prisoner: escort.prisoner) %>
 <%= render('pdfs/front_page_markers') %>
 <%= render('pdfs/updates') %>
 <%= render('pdfs/risk_summary') %>
