Add fonts to container for PDF use
Add Liberation Sans font to the container for use
when building the PDF.

see: http://www.dafont.com/liberation-sans.font

The current container only contains the font Dejavu.

--- a/app/assets/stylesheets/pdf/_variables.scss
+++ b/app/assets/stylesheets/pdf/_variables.scss
@@ -31,6 +31,6 @@ $bordered-unit-padding: ($padding / 3);
 $font-weight-standard: 400;
 
 // Composites
-$font-family: "Helvetica Neue", Arial, "Lucida Grande", sans-serif;
+$font-family: "Liberation Sans";
 $border: $border-width solid $dark_grey;
 $border-black: $border-width solid $black;
