Use Cells instead of Presenters
see: https://github.com/apotonick/cells

Cells allow you to encapsulate parts of your UI into 
components into view models. View models, or cells, 
are simple ruby classes that can render templates.

--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -12,7 +12,7 @@
 <%= render('pdfs/header') %>
 <%= render('pdfs/not_for_release') %>
 <%= render('pdfs/move_information') %>
-<%= render('pdfs/prisoner', prisoner: escort.prisoner) %>
+<%= cell('pdf/prisoner', escort.prisoner) %>
 <%= render('pdfs/front_page_markers') %>
 <%= render('pdfs/updates') %>
 <%= render('pdfs/risk_summary') %>
