--- a/app/views/escorts/summary.html.erb
+++ b/app/views/escorts/summary.html.erb
@@ -7,6 +7,6 @@
     <header>
       <h1><%= t(".heading") %></h1>
     </header>
-    <%= render('escorts/summary/prisoner', prisoner: @summary.prisoner) %>
+    <%= cell(:prisoner, escort.prisoner) %>
   </div>
 </div>
