Add reason for move to PDF
Adds this section to the PDF and fixes the issue with the SASH checkbox being
misaligned.

--- a/app/views/pdfs/_move_information.html.erb
+++ b/app/views/pdfs/_move_information.html.erb
@@ -18,3 +18,9 @@
     <div class="input"></div>
   </div>
 </div>
+<div class="move-information">
+  <div class="reason-for-move">
+    <strong class="label"><%= t('.reason_for_move') %></strong>
+    <div class="input"></div>
+  </div>
+</div>
