--- a/app/assets/stylesheets/pdf/_updates.scss
+++ b/app/assets/stylesheets/pdf/_updates.scss
@@ -8,6 +8,7 @@
   }
   .sash-container {
     float: right;
+    width: 30.5%;
     .sash-field {
       @extend .check-box;
       margin-right: $margin-unit;
