Fix IE8 and IE9 rendering issues
Introduce IE specific SASS files and associated conditional
comments. Uses existing SASS files where appropriate.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <%= content_for :stylesheets do %>
-    <!--[if IE 8]><%= stylesheet_link_tag('internet-explorer/ie8.css') %><![endif]-->
     <%= stylesheet_link_tag('application.css') %>
+    <!--[if IE 8]><%= stylesheet_link_tag('ie8') %><![endif]-->
+    <!--[if IE 9]><%= stylesheet_link_tag('ie9') %><![endif]-->
 <% end %>
 
 <% content_for :content_override do %>
