--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -1,5 +1,8 @@
 .form-date {
   margin-bottom: 30px;
+  .datefield-hint {
+    margin-top: 0;
+  }
   .form-group {
     float: left;
     width: 50px;
