Add a move overview to the summary page

--- a/app/views/escorts/summary.html.erb
+++ b/app/views/escorts/summary.html.erb
@@ -8,5 +8,6 @@
       <h1><%= t(".heading") %></h1>
     </header>
     <%= render('escorts/summary/prisoner', prisoner: @summary.prisoner) %>
+    <%= render('escorts/summary/move', move: @summary.move) %>
   </div>
 </div>
