--- a/app/assets/stylesheets/_summary.scss
+++ b/app/assets/stylesheets/_summary.scss
@@ -51,5 +51,17 @@
     .pnc-number {
       @include grid-column(1/4)
     }
+    .origin {
+      @include grid-column(1/4)
+    }
+    .destination {
+      @include grid-column(1/4)
+    }
+    .date_of_travel {
+      @include grid-column(1/4)
+    }
+    .reason {
+      @include grid-column(3/4)
+    }
   }
 }
