Add move information to PDF

--- a/app/views/pdfs/_move_information.html.erb
+++ b/app/views/pdfs/_move_information.html.erb
@@ -1,17 +1,17 @@
 <div class="move-information">
   <div class="from">
     <strong class="label"><%= t('.from') %></strong>
-    <div class="input"></div>
+    <div class="input"><%= move.origin %></div>
   </div>
   <div class="to">
     <strong class="label"><%= t('.to') %></strong>
-    <div class="input"></div>
+    <div class="input"><%= move.destination %></div>
   </div>
   <div class="date-of-travel">
       <strong class="label"><%= t('.date') %></strong>
-      <div class="input"></div>
-      <div class="input"></div>
-      <div class="input"></div>
+      <div class="input"><%= move.date_of_travel_day %></div>
+      <div class="input"><%= move.date_of_travel_month %></div>
+      <div class="input"><%= move.date_of_travel_year %></div>
   </div>
   <div class="destination-update">
     <strong class="label"><%= t('.destination_update') %></strong>
@@ -21,6 +21,6 @@
 <div class="move-information">
   <div class="reason-for-move">
     <strong class="label"><%= t('.reason_for_move') %></strong>
-    <div class="input"></div>
+    <div class="input"><%= move.reason %></div>
   </div>
 </div>
