--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -11,7 +11,7 @@
 <body>
 <%= render('pdfs/header') %>
 <%= render('pdfs/not_for_release') %>
-<%= render('pdfs/move_information') %>
+<%= render('pdfs/move_information', move: escort.move) %>
 <%= render('pdfs/prisoner', prisoner: escort.prisoner) %>
 <%= render('pdfs/front_page_markers') %>
 <%= render('pdfs/updates') %>
