Move SummaryPresenter into its own folder
We renamed SummaryPresenter to EscortPresenter and
moved the logic into a folder to be consistent with
the work done with the PDF generation.

--- a/app/views/escorts/summary.html.erb
+++ b/app/views/escorts/summary.html.erb
@@ -7,7 +7,7 @@
     <header>
       <h1><%= t(".heading") %></h1>
     </header>
-    <%= render('escorts/summary/prisoner', prisoner: @summary.prisoner) %>
-    <%= render('escorts/summary/move', move: @summary.move) %>
+    <%= render('escorts/summary/prisoner', prisoner: @escort.prisoner) %>
+    <%= render('escorts/summary/move', move: @escort.move) %>
   </div>
 </div>
