--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,8 @@
   <% end %>
 <% end %>
 
-<% content_for :js_gt_ie do %> 8 <% end %>
+
+<%= render 'shared/moj_template_ie_cc' %>
 
 <% content_for :javascripts do %>
     <%= javascript_include_tag 'application.js' %>
