--- a/app/views/escorts/summary/_move.html.erb
+++ b/app/views/escorts/summary/_move.html.erb
@@ -2,7 +2,7 @@
   <h2><%= t('.heading') %></h2>
   <%= link_to t('.edit_section'), move.edit_section_path %>
 </div>
-<div class="summary-content">
+<div class="summary-content" id="move-information">
   <div>
     <div class="origin">
       <strong class="label"><%= t('.origin') %></strong>
