--- a/app/views/escorts/summary/_prisoner.html.erb
+++ b/app/views/escorts/summary/_prisoner.html.erb
@@ -2,7 +2,7 @@
   <h2><%= t('.heading') %></h2>
   <%= link_to t('.edit_section'), prisoner.edit_section_path %>
 </div>
-<div class="summary-content">
+<div class="summary-content" id="prisoner-information">
   <div>
     <div class="family-name">
       <strong class="label"><%= t('.family_name') %></strong>
