Prevent risks in PDF breaking over multiple lines
Adds CSS to prevent individual risks being split over multiple
lines if it or a predecessor has long content.

--- a/app/assets/stylesheets/pdf/_risk_summary.scss
+++ b/app/assets/stylesheets/pdf/_risk_summary.scss
@@ -6,6 +6,7 @@
 
 .risk {
   @extend .row;
+  @extend .no-break;
   > div {
     @extend .col;
   }
@@ -24,6 +25,7 @@
   }
   .content {
     @extend .dark-border;
+    padding: $padding-unit;
     min-height: 4.5em;
   }
 }
