Populate risk summary section in PDF

--- a/app/views/pdfs/_risk_summary.html.erb
+++ b/app/views/pdfs/_risk_summary.html.erb
@@ -11,7 +11,7 @@
   <div class="risk">
     <div class="description">
       <div class="title"><strong><%= t('.risks_to_self') %></strong></div>
-      <div class="content"></div>
+      <div class="content"><%= risks.to_self_details %></div>
     </div>
     <div class="date">
       <div class="title"><%= t('.date_of_incident') %></div>
@@ -21,7 +21,7 @@
   <div class="risk">
     <div class="description">
       <div class="title"><strong><%= t('.violence') %></strong></div>
-      <div class="content"></div>
+      <div class="content"><%= risks.violence_details %></div>
     </div>
     <div class="date">
       <div class="title"><%= t('.date_of_incident') %></div>
@@ -31,7 +31,7 @@
   <div class="risk">
     <div class="description">
       <div class="title"><strong><%= t('.risk_from_others') %></strong></div>
-      <div class="content"></div>
+      <div class="content"><%= risks.from_others_details %></div>
     </div>
     <div class="date">
       <div class="title"><%= t('.date_of_incident') %></div>
@@ -41,7 +41,7 @@
   <div class="risk">
     <div class="description">
       <div class="title"><strong><%= t('.escort_escape_risk') %></strong></div>
-      <div class="content"></div>
+      <div class="content"><%= risks.escape_details %></div>
     </div>
     <div class="date">
       <div class="title"><%= t('.date_of_incident') %></div>
@@ -52,7 +52,7 @@
     <div class="description">
       <div class="title"><strong><%= t('.intolerant_behaviour') %></strong>
       </div>
-      <div class="content"></div>
+      <div class="content"><%= risks.intolerant_behaviour_details %></div>
     </div>
     <div class="date">
       <div class="title"><%= t('.date_of_incident') %></div>
@@ -62,7 +62,7 @@
   <div class="risk">
     <div class="description">
       <div class="title"><strong><%= t('.prohibited_items') %></strong></div>
-      <div class="content"></div>
+      <div class="content"><%= risks.prohibited_items_details %></div>
     </div>
     <div class="date">
       <div class="title"><%= t('.date_of_incident') %></div>
@@ -72,7 +72,7 @@
   <div class="risk">
     <div class="description">
       <div class="title"><strong><%= t('.non_association') %></strong></div>
-      <div class="content"></div>
+      <div class="content"><%= risks.non_association_details %></div>
     </div>
     <div class="date">
       <div class="title"><%= t('.date_of_incident') %></div>
