Extract generic radio toggle & textarea partial

--- a/app/views/escorts/_risks.html.erb
+++ b/app/views/escorts/_risks.html.erb
@@ -1,3 +1,8 @@
 <% Risks::GENERAL.each do |risk| %>
-  <%= render('shared/risk', f: f, risk: risk) %>
+  <%= render(
+        'shared/toggle_with_details_field',
+        f: f,
+        attribute: risk,
+        i18n_scope: 'risk'
+      ) %>
 <% end %>
