Introduce form helper and fix date validation
Commit will:

* Add form helper module with methods to manage date rendering
* Fix date validation presentation issues within module methods
* Link validation flash to related input
* Refactor 'move' and 'prisoner' information to use module helper
  methods.

--- a/app/views/shared/flashes/_save_errors.erb
+++ b/app/views/shared/flashes/_save_errors.erb
@@ -8,7 +8,7 @@
             <li>
               <%= link_to(
                     object.errors.full_messages_for(attribute).first,
-                    "##{object.class.name.downcase}_#{attribute}"
+                    "##{object.class.name.underscore}_#{attribute}"
                   )
               %>
             </li>
