--- a/app/views/escorts/_prisoner_information.html.erb
+++ b/app/views/escorts/_prisoner_information.html.erb
@@ -11,51 +11,10 @@
   <%= f.text_field :forenames, class: 'string form-control' %>
 </div>
 
-<div class="form-date">
-  <fieldset>
-    <legend class="form-label-bold">
-      <%= t('.dob.label') %>
-    </legend>
-    <p class="form-hint datefield-hint" id="dobHint">
-      <%= t('.dob.hint') %>
-    </p>
-    <div class="form-group form-group-day">
-      <label for="prisoner_information_date_of_birth_day">
-        <%= t('.dob.day_label') %>
-      </label>
-      <%= text_field_tag(
-              'prisoner_information[date_of_birth][day]',
-              f.object.date_of_birth_presenter.day,
-              maxlength: 2,
-              size: 2,
-              class: 'form-control'
-          ) %>
-    </div>
-    <div class="form-group form-group-month">
-      <label for="prisoner_information_date_of_birth_month">
-        <%= t('.dob.month_label') %>
-      </label>
-      <%= text_field_tag(
-              'prisoner_information[date_of_birth][month]',
-              f.object.date_of_birth_presenter.month,
-              maxlength: 2,
-              size: 2,
-              class: 'form-control'
-          ) %>
-    </div>
-    <div class="form-group form-group-year">
-      <label for="prisoner_information_date_of_birth_year">
-        <%= t('.dob.year_label') %>
-      </label>
-      <%= text_field_tag(
-              'prisoner_information[date_of_birth][year]',
-              f.object.date_of_birth_presenter.year,
-              maxlength: 4,
-              size: 4,
-              class: 'form-control'
-          ) %>
-    </div>
-  </fieldset>
+<div class="form-group">
+  <%= date_fields(f, :date_of_birth) do %>
+    <%= render('/shared/date_of_birth_inputs', f: f) %>
+  <% end %>
 </div>
 
 <div class="form-group">
