Link medication label to related input

--- a/app/views/escorts/_healthcare.html.erb
+++ b/app/views/escorts/_healthcare.html.erb
@@ -27,7 +27,7 @@
 
       <div class="form-group optional-section">
         <div class="form-group">
-        <%= f.label :mpv_required, value: true, class: 'block-label inline' do %>
+        <%= f.label :mpv_required, class: 'block-label inline' do %>
           <%= f.check_box :mpv_required %>
           <%= t('healthcare.mpv_required') %>
         <% end %>
