--- a/app/views/pdfs/_healthcare_needs.html.erb
+++ b/app/views/pdfs/_healthcare_needs.html.erb
@@ -32,5 +32,28 @@
     </div>
     <div class="content"></div>
   </div>
+</div>
 
+<div class="medication">
+  <strong class="label"><%= t('.medication_title') %></strong>
+  <div class="instructions"><%= t('.medication_instructions') %></div>
+  <div class="input"></div>
+</div>
+
+<div class="healthcare-updates">
+  <table class="bordered-table">
+    <tr>
+      <th><%= t('.completed_by') %></th>
+      <th><%= t('.phone_number') %></th>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
+  <div class="updates">
+    <strong><%= t('.updates') %></strong>
+    <div><%= t('.update_instructions') %></div>
+    <div class="input"></div>
+  </div>
 </div>
