--- a/app/assets/stylesheets/pdf/_risk_summary.scss
+++ b/app/assets/stylesheets/pdf/_risk_summary.scss
@@ -5,34 +5,34 @@
 }
 
 .risk {
-  @extend .row;
   @extend .no-break;
-  > div {
-    @extend .col;
-  }
-  .description {
-    width: 82.7%;
-  }
-  .date {
-    width: 17.3%;
-    text-align: center;
-    .content {
-      border-left: none;
+  @extend .bordered-table;
+  margin-top: 0;
+  margin-bottom: $margin-unit;
+  th {
+    border: none;
+    padding: 0;
+    &:first-child {
+      font-weight: bold;
+      padding-left: 0;
+    }
+    &:last-child {
+      width: 17%;
+      text-align: center;
     }
   }
-  .title {
-    min-height: 1.5em;
-  }
-  .content {
-    @extend .dark-border;
-    padding: $padding-unit;
-    min-height: 4.5em;
+  td {
+    span {
+      display: inline-block;
+      min-height: 4.5em;
+    }
   }
 }
 
 .completed-by {
   @extend .light-background;
   @extend .padded;
+  @extend .no-break;
   margin-top: $margin-large;
   > div {
     @extend .row;
