--- a/app/views/pdfs/_risk_summary.html.erb
+++ b/app/views/pdfs/_risk_summary.html.erb
@@ -8,77 +8,84 @@
       <div class="input"></div>
     </div>
   </div>
-  <div class="risk">
-    <div class="description">
-      <div class="title"><strong><%= t('.risks_to_self') %></strong></div>
-      <div class="content"><%= risks.to_self_details %></div>
-    </div>
-    <div class="date">
-      <div class="title"><%= t('.date_of_incident') %></div>
-      <div class="content"></div>
-    </div>
-  </div>
-  <div class="risk">
-    <div class="description">
-      <div class="title"><strong><%= t('.violence') %></strong></div>
-      <div class="content"><%= risks.violence_details %></div>
-    </div>
-    <div class="date">
-      <div class="title"><%= t('.date_of_incident') %></div>
-      <div class="content"></div>
-    </div>
-  </div>
-  <div class="risk">
-    <div class="description">
-      <div class="title"><strong><%= t('.risk_from_others') %></strong></div>
-      <div class="content"><%= risks.from_others_details %></div>
-    </div>
-    <div class="date">
-      <div class="title"><%= t('.date_of_incident') %></div>
-      <div class="content"></div>
-    </div>
-  </div>
-  <div class="risk">
-    <div class="description">
-      <div class="title"><strong><%= t('.escort_escape_risk') %></strong></div>
-      <div class="content"><%= risks.escape_details %></div>
-    </div>
-    <div class="date">
-      <div class="title"><%= t('.date_of_incident') %></div>
-      <div class="content"></div>
-    </div>
-  </div>
-  <div class="risk">
-    <div class="description">
-      <div class="title"><strong><%= t('.intolerant_behaviour') %></strong>
-      </div>
-      <div class="content"><%= risks.intolerant_behaviour_details %></div>
-    </div>
-    <div class="date">
-      <div class="title"><%= t('.date_of_incident') %></div>
-      <div class="content"></div>
-    </div>
-  </div>
-  <div class="risk">
-    <div class="description">
-      <div class="title"><strong><%= t('.prohibited_items') %></strong></div>
-      <div class="content"><%= risks.prohibited_items_details %></div>
-    </div>
-    <div class="date">
-      <div class="title"><%= t('.date_of_incident') %></div>
-      <div class="content"></div>
-    </div>
-  </div>
-  <div class="risk">
-    <div class="description">
-      <div class="title"><strong><%= t('.non_association') %></strong></div>
-      <div class="content"><%= risks.non_association_details %></div>
-    </div>
-    <div class="date">
-      <div class="title"><%= t('.date_of_incident') %></div>
-      <div class="content"></div>
-    </div>
-  </div>
+  
+  <table class="risk">
+    <tr>
+      <th><%= t('.risks_to_self') %></th>
+      <th><%= t('.date_of_incident') %></th>
+    </tr>
+    <tr>
+      <td><span><%= risks.to_self_details %></span></td>
+      <td><span></span></td>
+    </tr>
+  </table>
+
+  <table class="risk">
+    <tr>
+      <th><%= t('.violence') %></th>
+      <th><%= t('.date_of_incident') %></th>
+    </tr>
+    <tr>
+      <td><span><%= risks.violence_details %></span></td>
+      <td><span></span></td>
+    </tr>
+  </table>
+
+  <table class="risk">
+    <tr>
+      <th><%= t('.risk_from_others') %></th>
+      <th><%= t('.date_of_incident') %></th>
+    </tr>
+    <tr>
+      <td><span><%= risks.from_others_details %></span></td>
+      <td><span></span></td>
+    </tr>
+  </table>
+
+  <table class="risk">
+    <tr>
+      <th><%= t('.escort_escape_risk') %></th>
+      <th><%= t('.date_of_incident') %></th>
+    </tr>
+    <tr>
+      <td><span><%= risks.escape_details %></span></td>
+      <td><span></span></td>
+    </tr>
+  </table>
+
+  <table class="risk">
+    <tr>
+      <th><%= t('.intolerant_behaviour') %></th>
+      <th><%= t('.date_of_incident') %></th>
+    </tr>
+    <tr>
+      <td><span><%= risks.intolerant_behaviour_details %></span></td>
+      <td><span></span></td>
+    </tr>
+  </table>
+
+  <table class="risk">
+    <tr>
+      <th><%= t('.prohibited_items') %></th>
+      <th><%= t('.date_of_incident') %></th>
+    </tr>
+    <tr>
+      <td><span><%= risks.prohibited_items_details %></span></td>
+      <td><span></span></td>
+    </tr>
+  </table>
+
+  <table class="risk">
+    <tr>
+      <th><%= t('.non_association') %></th>
+      <th><%= t('.date_of_incident') %></th>
+    </tr>
+    <tr>
+      <td><span><%= risks.non_association_details %></span></td>
+      <td><span></span></td>
+    </tr>
+  </table>
+
   <div class="completed-by">
     <div>
       <div><%= t('.completed_by') %></div>
