--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -16,7 +16,7 @@
 <%= render('pdfs/front_page_markers') %>
 <%= render('pdfs/updates') %>
 <%= render('pdfs/risk_summary', risks: escort.risks) %>
-<%= render('pdfs/healthcare_needs') %>
+<%= render('pdfs/healthcare_needs', healthcare: escort.healthcare) %>
 <%= render('pdfs/offences') %>
 <%= render('pdfs/handover_details') %>
 <%= render('pdfs/record_of_handover') %>
